--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.33.7",
     "remark": "^14.0.2",
     "remark-html": "^15.0.0"
   },
